# sinvert_mbl_fork

./: .gitignore  README.md  compile.sh  contributors
src/: Basis.h  CMakeLists.txt  Hamiltonian.h  Operator.h  sinvert.cc
src/conf/: linux.cfg  linux.cmake
test/: run.sh  sinvert.out  slepc.options
